refactor: reformat frontend components and backend services to enforce consistent coding styles and structure